# humanoid

./: .gitignore  .travis.yml  Dockerfile  README.md  exclude.txt  test.bag  todo.md
scripts/: backup.sh  build.sh
src/gui/beginner_tutorials/: CMakeLists.txt  package.xml
src/gui/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  rosBagReader.cpp  rosBagWriter.cpp  talker.cpp
src/gui/dcalibrator/launch/: dcalibrator.launch
src/gui/dcalibrator/src/: undist.cpp
src/gui/dmonitor/: CMakeLists.txt
src/gui/dmonitor/include/dmonitor/: field.hpp  map.hpp  robot.hpp  viewRange.hpp
src/gui/dmonitor/src/: field.cpp  guiImage.cpp  main.cpp  map.cpp  robot.cpp  viewRange.cpp
src/gui/dmonitor/src/qml/: main.qml
src/gui/dviz/: CMakeLists.txt  package.xml
src/gui/dviz/include/: ball.hpp  circle.hpp  common.hpp  control_widget.hpp  dest.hpp  field.hpp  goals.hpp  item.hpp  item_manager.hpp  mainwindow.hpp  model.hpp  obstacles.hpp  particles.hpp  render.hpp  robot.hpp  streamer.hpp  view.hpp  viewrange.hpp  whitelines.hpp  whitepoints.hpp  world.hpp
src/gui/dviz/src/: common.cpp  control_widget.cpp  main.cpp  mainwindow.cpp  model.cpp  render.cpp  streamer.cpp  view.cpp
src/gui/dviz/src/items/: ball.cpp  circle.cpp  dest.cpp  field.cpp  goals.cpp  item.cpp  item_manager.cpp  obstacles.cpp  particles.cpp  robot.cpp  viewrange.cpp  whitelines.cpp  whitepoints.cpp  world.cpp
src/robot/dbehavior/: CMakeLists.txt  behavior.md  package.xml
src/robot/dbehavior/launch/: 1.launch  2.launch  3.launch  4.launch  5.launch  6.launch  default.launch  demomain.launch
src/robot/dbehavior/src/: Blackboard.py  Brain.py  FieldGeometry.py  Parameters.py  Timer.py  main.py
src/robot/dbehavior/src/demo/: AvoidObstacleTest.py  DemoMain.py  Foo.py  GetImage.py  GoalieDemo.py  GoalieDemo2.py  GoalieDemoF.py  GoaliePlusStriker.py  Odometer.py  TestKick.py  WalkAround.py
src/robot/dbehavior/src/headskills/: FindBall.py  FindUpDown.py  GoalieLookDown.py  GoalieScanField.py  IsBallFarAway.py  LookAround.py  ScanField.py  ScanField_fast.py  TrackBall.py  TrackCircle.py  TrackGoal.py
src/robot/dbehavior/src/roles/: Defender.py  FreeKick.py  Goalie.py  Midfielder.py  Role.py  Striker.py
src/robot/dbehavior/src/skills/: ApproachBall.py  Assist.py  Attack.py  AvoidObstacle.py  BlockBall.py  Defend.py  Dribble.py  FindBallAroundOnce.py  Game.py  GoToGoalieFPoint.py  GoToGoaliePoint.py  GoToGoaliePos.py  GoalieAttack.py  GoalieBack.py  GoalieMain.py  GoalieNormal.py  Init.py  Kick.py  Lie.py  LineUpGoalie.py  Lineup.py  Patrol.py  Reentry.py  SeekBall.py  SeekBall_Fuck.py  Strike.py  TurnAround.py  TurnAroundOnce.py  WalkAroundPenalty.py  WalkBehindBall.py
src/robot/dbehavior/src/states/: GCPlay.py  GCStates.py  Ready.py
src/robot/dbehavior/src/utils/: CalcAttackPoint.py  VecPos.py  WalkToPointSolver.py  actioncommand.py  mathutil.py
src/robot/dconfig/: global.yml
src/robot/dconfig/1/dbehaviour/: constant.yml
src/robot/dconfig/1/dmotion/: kick.yml  motion.yml  motor.yml  setup.yml
src/robot/dconfig/1/dvision/: amcl.yml  camera.yml
src/robot/dconfig/2/dbehaviour/: behaviour.yml
src/robot/dconfig/2/dmotion/: motion.yml
src/robot/dconfig/2/dvision/: amcl.yml  camera.yml  localization.yml
src/robot/dconfig/3/dbehaviour/: behaviour.yml
src/robot/dconfig/3/dmotion/: kick.yml  motion.yml  motor.yml  setup.yml
src/robot/dconfig/3/dvision/: amcl.yml  camera.yml  misc.yml
src/robot/dconfig/4/dbehaviour/: behaviour.yml
src/robot/dconfig/4/dmotion/: kick.yml  motion.yml  motor.yml  setup.yml
src/robot/dconfig/4/dvision/: camera.yml  misc.yml
src/robot/dconfig/5/dmotion/: motion.yml
src/robot/dconfig/5/dvision/: amcl.yml  camera.yml  localization.yml
src/robot/dconfig/6/dbehaviour/: behaviour.yml
src/robot/dconfig/6/dmotion/: kick.yml  motion.yml  motor.yml  setup.yml
src/robot/dconfig/6/dvision/: amcl.yml  camera.yml  localization.yml  misc.yml
src/robot/dconfig/include/dconfig/: dconstant.hpp
src/robot/dconfig/scripts/: config_watchdog.py
src/robot/dlaunch/launch/: 2.launch  3.launch  4.launch  demomain.launch  game.launch  sim_1.launch  sim_2.launch  sim_3.launch  sim_4.launch  sim_5.launch  sim_6.launch  sim_default.launch
src/robot/dmotion/: CMakeLists.txt  package.xml
src/robot/dmotion/include/dmotion/: BehaviorRecv.hpp  (+6 more)
src/robot/dmotion/launch/: 1.launch  2.launch  3.launch  4.launch  5.launch  6.launch  default.launch
src/robot/dmotion/src/: BehaviorRecv.cpp  GaitStateManager.cpp  MotionData.cpp  One_D_Filter.cpp  RobotStatus.cpp  VecPos.cpp  dmotion.cpp  main.cpp  transitHub.cpp
src/robot/dvision/: CMakeLists.txt  HowToCalibrate.md  package.xml
src/robot/dvision/include/dvision/: ball_detector.hpp  ball_tracker.hpp  camera.hpp  cameraSettings.hpp  circle_detector.hpp  distortionModel.hpp  dvision.hpp  field_detector.hpp  frame.hpp  goal_detector.hpp  kalman.hpp  line_classifier.hpp  line_detector.hpp  line_segment.hpp  object_detector.hpp  obstacle_detector.hpp  parameters.hpp  projection.hpp  ringbuffer.hpp  timer.hpp  utils.hpp  vision_shared_info.hpp
src/robot/dvision/include/dvision/amcl/: amcl.hpp  kdtree.hpp  map.hpp  particle.hpp  pose.hpp  tools.hpp  types.hpp
src/robot/dvision/launch/: 1.launch  2.launch  3.launch  4.launch  5.launch  6.launch  capture.launch  default.launch  gdb.launch
src/robot/dvision/matlab/: bot1.txt  bot2.txt  bot3.txt  bot4.txt  bot5.txt  bot6.txt  main.m
src/robot/dvision/src/: dvision.cpp  frame.cpp  main.cpp  parameters.cpp
src/robot/dvision/src/camera/: calibration.cpp  camera.cpp  distortionModel.cpp  projection.cpp
src/robot/dvision/src/detector/: ball_detector.cpp  circle_detector.cpp  field_detector.cpp  goal_detector.cpp  line_classifier.cpp  line_detector.cpp  object_detector.cpp  obstacle_detector.cpp
src/robot/dvision/src/localization/amcl/: amcl.cpp  kdtree.cpp  map.cpp  particle.cpp  pose.cpp
src/robot/dvision/src/tools/: ball_tracker.cpp  capture.cpp  kalman.cpp  line_segment.cpp  utils.cpp
src/robot/dvision/test/: test_distortionModel.cpp
(+29 files in other folders)
