<?xml version="1.0"?>
<package>
  <name>dviz</name>
  <version>0.0.0</version>
  <description>The dviz package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mwx@todo.todo">mwx</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dvision</build_depend>
  <build_depend>dmsgs</build_depend>


</package>
